# vuln-bot

./: .eleventy.js  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  KICKSTART_ANALYSIS.md  MANIFEST.yaml  NEXT_STEPS.md  README.md  commitlint.config.js  coverage.json  coverage.xml  package-lock.json  package.json  project_plan.md  pyproject.toml  requirements.txt  storage_comparison.md  test_report.md  tsconfig.json  tsconfig.test.json  vitest.config.ts  webpack.config.js
_posts/: 2025-06-30-vuln-brief.md  2025-07-01-vuln-brief.md  2025-07-02-vuln-brief.md  2025-07-03-vuln-brief.md  2025-07-04-vuln-brief.md  2025-07-05-vuln-brief.md  2025-07-06-vuln-brief.md  2025-07-07-vuln-brief.md  2025-07-08-vuln-brief.md  2025-07-09-vuln-brief.md  2025-07-10-vuln-brief.md  2025-07-11-vuln-brief.md  2025-07-12-vuln-brief.md  2025-07-13-vuln-brief.md  2025-07-14-vuln-brief.md  2025-07-15-vuln-brief.md  2025-07-16-vuln-brief.md  2025-07-17-vuln-brief.md  2025-07-18-vuln-brief.md  2025-07-19-vuln-brief.md
config/: quality.yaml
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  RELEASE.md  accessibility-audit.md  design-system-demo.html  design-system.md
scripts/: __init__.py  bump_version.py  filter_high_epss.py  generate_badge.py  main.py  metrics.py  models.py  storage_optimizer.py  visualize_metrics.py
src/: atom.njk  feed.njk  index.njk  manifest.json
tests/: README.md  analytics.test.ts  conftest.py  dashboard.test.ts  setup.ts  test_badge_update.py  test_base_client.py  test_base_client_extended.py  test_base_client_simple.py  test_briefing_generator.py  test_bump_version.py  test_cache_manager.py  test_cache_manager_simple.py  test_cve_client.py  test_cvelist_client.py  test_cvelist_client_additional.py  test_cvelist_client_extended.py  test_end_to_end.py  test_epss_client.py  test_epss_client_simple.py  test_filter_high_epss.py  test_frontend.html  test_generate_badge.py  test_github_advisory_client.py  test_integration_pipeline.py  test_main.py  test_main_simple.py  test_models.py  test_normalizer.py  test_normalizer_extended.py  test_optimized_briefing_generator.py  test_orchestrator.py  (+5 more)
(+33930 files in other folders)
